<resources>
    <string name="app_name">SoftwareProjectApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sign_in">Registrarse</string>
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="start">Comencemos!</string>
    <string name="textInformation"><b>Llena los campos para completar el registro</b></string>
    <string name="textInformation_2">Tus datos se usaran para personalizar tu perfil.</string>
    <string name="sign_in_google"><b>Acceder con google</b></string>
    <string name="prefs_file">com.example.softwareprojectapp.PREFERENCE_FILE_KEY</string>
    <string name="info_invalid_length_pass">La contraseña debe tener minimo 8 caracteres</string>
    <string name="add_photo">Añadir foto</string>
    <string name="take_photo">Tomar foto</string>
    <string name="skip_photo">omitir</string>
    <string name="upload_from_gallery">subir desde la galería</string>
    <string name="next_sign_in">continuar</string>
    <string name="continue_signIn">Continuar</string>
    <string name="home">Inicio</string>
    <string name="store">Tienda</string>
    <string name="profile">Perfil</string>
    <string name="search">Buscar</string>
    <string name="add_product">Añadir producto</string>
    <string name="inventory">Inventario</string>
    <string name="account">Cuenta</string>
    <string name="describe_your_product">Describe tu producto</string>
    <string name="product_title">Titulo de tu producto</string>
    <string name="product_description">Descripción de tu producto</string>
    <string name="price">Precio</string>
    <string name="product_img_add">Agrega una imagen</string>
    <string name="update_product">Actualizar producto</string>
    <string name="update_img">Actualiza la imagen</string>
    <string name="amount">Cantidad:</string>
    <string name="add_to_car">Agregar al carrito</string>
    <string name="total">Total:</string>
    <string name="total_pedido">Total Pedido:</string>
    <string name="text_marker_specifications">Para especificar otro destino de tu pedido arrastra el marcador</string>
    <string name="address">Dirección:</string>
    <string name="confirm_order">Confimar pedido</string>
    <string name="ask_order">Pedir</string>
    <string name="update_photo">Actualizar foto</string>
    <string name="update_state">Actualizar estado:</string>
    <string name="shopping_car">Carrito de compras</string>
    <string name="products_total">Total productos:</string>
    <string name="delivery_service">Servicio de entrega:</string>
    <string name="order_description">Descripción de la orden</string>

    <string-array name="spinner_options">
        <item>Pendiente</item>
        <item>En preparación</item>
        <item>Lista para envio</item>
        <item>En camino</item>
        <item>Terminada</item>
        <item>Cancelada</item>
    </string-array>

</resources>