<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:rotation="20"
            android:src="@drawable/image_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/start"
            android:textColor="@color/standard_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnComeBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMainInfo"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="30dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSignIn">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textViewInfo_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="17sp"
                    android:text="@string/textInformation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewInfo_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/textInformation_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textViewInfo_1"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            android:padding="10dp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/custom_image_person"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewMainInfo"/>



        <EditText
            android:id="@+id/editTextEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:padding="10dp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/custom_image_email"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextName"/>


        <EditText
            android:id="@+id/editTextPass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:padding="10dp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/custom_image_lock"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"/>


        <EditText
            android:id="@+id/editTextConfirmPass"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:padding="10dp"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/custom_image_lock"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPass"/>

        <TextView
            android:id="@+id/textViewLengthPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:textColor="#FF0000"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPass"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnNextSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="40dp"
            android:textColor="@color/standard_color"
            android:text="@string/next_sign_in"
            android:paddingHorizontal="30dp"
            android:background="@drawable/background_btn_sign_in"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPass"/>

        <Button
            android:id="@+id/btnComeBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_arrow_back"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBarSignIn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnNextSignIn"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>