<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddProductFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">




        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextProductTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:hint="@string/product_title"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/background_input_fields"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editTextProductDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/product_description"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/background_input_fields"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextProductTitle"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/editTextProductPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/price"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:layout_marginHorizontal="40dp"
                    android:background="@drawable/background_input_fields"
                    android:inputType="numberDecimal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editTextProductDescription"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textViewAddPhotoProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_img_add"
                    android:layout_marginTop="30dp"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/editTextProductPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewImageProduct"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardElevation="10dp"
                    app:layout_constraintTop_toBottomOf="@id/textViewAddPhotoProduct"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/imageViewPhotoProduct"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:src="@drawable/ic_photo_size"
                        android:scaleType="fitXY"/>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btnAddImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:text="@string/add_photo"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/background_btn_take_photo"
                    app:backgroundTint="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardViewImageProduct"/>

                <Button
                    android:id="@+id/btnAddProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:text="@string/add_product"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/background_btn_take_photo"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnAddImage"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <FrameLayout
            android:id="@+id/frameLayoutBanner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/standard_color">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/describe_your_product"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btnComeBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/ic_arrow_back_white"
                app:backgroundTint="@null"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AA393939"
            android:visibility="gone">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:indeterminate="true"/>
        </FrameLayout>

    </FrameLayout>

</LinearLayout>