<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetLocationOrderActivity">


    <FrameLayout
        android:id="@+id/frameLayoutMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideLine60">


        <fragment
            android:id="@+id/fragmentMapOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAnnotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="60dp"
            android:layout_gravity="bottom"
            app:cardElevation="10dp">

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_marker_specifications"
                android:textSize="15sp"
                android:layout_margin="20dp"/>

        </androidx.cardview.widget.CardView>


    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6"/>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/address"
        android:background="@drawable/background_input_fields"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayoutMap"/>

    <Button
        android:id="@+id/btnConfirmOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/background_btn_log_in"
        android:text="@string/confirm_order"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress" />


</androidx.constraintlayout.widget.ConstraintLayout>